[gd_scene load_steps=4 format=3 uid="uid://w1ggf3gik11s"]

[ext_resource type="Script" path="res://Scenes/draft_scenes/draft_test_gameover.gd" id="1_tv4d7"]
[ext_resource type="PackedScene" uid="uid://u5nt71m12ffc" path="res://Scenes/draft_scenes/player_khi.tscn" id="2_46a3o"]
[ext_resource type="PackedScene" uid="uid://q4lunxfvuv3m" path="res://Scenes/hud.tscn" id="3_drvbi"]

[node name="draft_test_gameover" type="Node2D"]
script = ExtResource("1_tv4d7")

[node name="Player" parent="." instance=ExtResource("2_46a3o")]
position = Vector2(554, 286)

[node name="hud" parent="." instance=ExtResource("3_drvbi")]

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="dead" from="Player" to="." method="_on_player_dead"]
[connection signal="dead" from="Player" to="hud" method="_on_player_dead"]
[connection signal="life_changed" from="Player" to="hud" method="_on_player_life_changed"]
[connection signal="restart_game" from="hud" to="." method="_on_hud_restart_game"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
